Add Backup overnight BGProcessingTask

--- a/Signal/Signal-Info.plist
+++ b/Signal/Signal-Info.plist
@@ -5,6 +5,7 @@
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
 		<string>AttachmentValidationBackfillMigrator</string>
+		<string>BackupBGProcessingTaskRunner</string>
 		<string>MessageAttachmentMigrationTask</string>
 		<string>MessageFetchBGRefreshTask</string>
 		<string>LazyDatabaseMigratorTask</string>
