--- a/Config/Project.xcconfig
+++ b/Config/Project.xcconfig
@@ -7,6 +7,7 @@ GCC_TREAT_INCOMPATIBLE_POINTER_TYPE_WARNINGS_AS_ERRORS = YES
 GCC_TREAT_WARNINGS_AS_ERRORS = YES
 MTL_TREAT_WARNINGS_AS_ERRORS = YES
 SWIFT_TREAT_WARNINGS_AS_ERRORS = YES
+OTHER_SWIFT_FLAGS = $(inherited) -warnings-as-errors
 
 // User-specific overrides
 #include? "User.xcconfig"
